<resources>
    <string name="app_name">The Guardian News App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="developer">Developer</string>
    <string name="herbert_daniel_rodriguez">info@chaacho.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sports">Sport</string>
    <string name="world">World</string>
    <string name="science">Science</string>
    <string name="environment">Environment</string>
    <string name="society">Society</string>
    <string name="fashion">Fashion</string>
    <string name="culture">Culture</string>
    <string name="title_of_news">Title of news</string>
    <string name="news_advance">News advance</string>
    <string name="author">Author</string>
    <string name="image_notice">Image Notice</string>
    <string name="date_of_published">Date of published</string>
    <string name="section_of_the_news">Section of the News</string>
    <string name="verify_conn">Verify the Internet connection</string>
    <string name="updated_just_now">Updated !</string>
    <string name="no_news">No News</string>
    <string name="business">Business</string>
    <string name="worldfragment">World</string>
    <string name="sports_fragm">Sport</string>
    <string name="science_frag">Science</string>
</resources>
