<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.chaacho.theguardiannewsapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_sports"
        android:name="com.chaacho.theguardiannewsapp.ui.SportsFragment"
        android:label="@string/sports"
        tools:layout="@layout/fragment_sports" />
    <fragment
        android:id="@+id/nav_worldFragment"
        android:name="com.chaacho.theguardiannewsapp.ui.WorldFragment"
        android:label="World"
        tools:layout="@layout/fragment_world" />
    <fragment
        android:id="@+id/nav_scienceFragment"
        android:name="com.chaacho.theguardiannewsapp.ui.ScienceFragment"
        android:label="@string/science_frag"
        tools:layout="@layout/fragment_science" />
    <fragment
        android:id="@+id/nav_environFragment"
        android:name="com.chaacho.theguardiannewsapp.ui.EnvironmentFragment"
        android:label="@string/environment"
        tools:layout="@layout/fragment_environment" />
    <fragment
        android:id="@+id/nav_societyFragment"
        android:name="com.chaacho.theguardiannewsapp.ui.SocietyFragment"
        android:label="@string/society"
        tools:layout="@layout/fragment_society" />
    <fragment
        android:id="@+id/nav_fashionFragment"
        android:name="com.chaacho.theguardiannewsapp.ui.FashionFragment"
        android:label="@string/fashion"
        tools:layout="@layout/fragment_fashion" />
    <fragment
        android:id="@+id/nav_businessFragment"
        android:name="com.chaacho.theguardiannewsapp.ui.BusinessFragment"
        android:label="@string/business"
        tools:layout="@layout/fragment_business" />
    <fragment
        android:id="@+id/nav_cultureFragment"
        android:name="com.chaacho.theguardiannewsapp.ui.CultureFragment"
        android:label="@string/culture"
        tools:layout="@layout/fragment_culture" />
</navigation>